--- a/src/content/RepoPage/repo-page.scss
+++ b/src/content/RepoPage/repo-page.scss
@@ -1,15 +1,15 @@
 .repo-page .bx--row {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding-top: $spacing-07;
+  padding-bottom: $spacing-07;
 }
 
 .repo-page .bx--search {
-  margin-bottom: 1rem;
+  margin-bottom: $spacing-05;
 }
 
 tr.bx--parent-row.bx--expandable-row + tr[data-child-row] td {
   padding-left: rem(60px);
-  padding-top: 1rem;
+  padding-top: $spacing-05;
 }
 
 tr.bx--parent-row.bx--expandable-row
